--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="profile__info">
           <div class="profile__block">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button"></button>
+        <button class="profile__add-button" type="button" aria-label="Добавить"></button>
       </section>
       <section class="elements">
         <div class="element">
@@ -39,7 +39,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
         <div class="element">
@@ -50,7 +50,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
         <div class="element">
@@ -61,7 +61,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
         <div class="element">
@@ -72,7 +72,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
         <div class="element">
@@ -83,7 +83,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
         <div class="element">
@@ -94,7 +94,7 @@
           />
           <div class="element__block">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
       </section>
@@ -107,24 +107,24 @@
         <button
           class="popup__close-button"
           type="button"
-          aria-label="Close"
+          aria-label="Закрыть"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__edit-form" name="popup-edit-form">
           <input
-            class="popup__input popup__input_title"
+            class="popup__input popup__input_type_title"
             type="text"
             name="title"
           />
           <input
-            class="popup__input popup__input_subtitle"
+            class="popup__input popup__input_type_subtitle"
             type="text"
             name="subtitle"
           />
-          <button class="popup__save-button" type="submit">Сохранить</button>
+          <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </div>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
