--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             alt="Карачаевск"
           />
           <div class="element__block">
-            <h2 class="element__title">Карачаевск</h2>
+            <h2 class="element__title">Карачаево-Черкесия</h2>
             <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
           </div>
         </div>
