--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="pages/index.css" />
     <title>Mesto</title>
   </head>
+
   <body class="page">
     <header class="header">
       <img
@@ -14,6 +15,7 @@
         alt="Логотип Mesto Russia"
       />
     </header>
+
     <main class="content">
       <section class="profile">
         <img
@@ -24,85 +26,49 @@
         <div class="profile__info">
           <div class="profile__block">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="Редактировать"
+            ></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button" aria-label="Добавить"></button>
+        <button
+          class="profile__add-button"
+          type="button"
+          aria-label="Добавить"
+        ></button>
       </section>
       <section class="elements">
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1088404-unsplash.jpg"
-            alt="Карачаевск"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1404681-unsplash.jpg"
-            alt="Гора Эльбрус"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1556355-unsplash.jpg"
-            alt="Домбай"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1404681-unsplash.jpg"
-            alt="Гора Эльбрус"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1556355-unsplash.jpg"
-            alt="Домбай"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/kirill-pershin-1088404-unsplash.jpg"
-            alt="Карачаевск"
-          />
-          <div class="element__block">
-            <h2 class="element__title">Карачаево-Черкесия</h2>
-            <button class="element__like-button" type="button" aria-label="Лайкнуть"></button>
-          </div>
-        </div>
+        <ul class="cards">
+          <template id="element-template">
+            <li class="element">
+              <img class="element__image" src="" alt="" />
+              <button
+                class="element__delete-button"
+                type="button"
+                aria-label="Удалить фотографию"
+              ></button>
+              <div class="element__block">
+                <h2 class="element__title"></h2>
+                <button
+                  class="element__like-button"
+                  type="button"
+                  aria-label="Лайкнуть"
+                ></button>
+              </div>
+            </li>
+          </template>
+        </ul>
       </section>
     </main>
+    
     <footer class="footer">
       <p class="footer__copyright">&#169; 2023 Mesto Russia</p>
     </footer>
-    <div class="popup">
+
+    <div class="popup popup_edit-profile">
       <div class="popup__container">
         <button
           class="popup__close-button"
@@ -110,7 +76,7 @@
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__edit-form" name="popup-edit-form">
+        <form class="popup__edit-form">
           <input
             class="popup__input popup__input_type_title"
             type="text"
@@ -121,10 +87,62 @@
             type="text"
             name="subtitle"
           />
-          <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+          <button
+            class="popup__save-button"
+            type="submit"
+            aria-label="Сохранить"
+          >
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
+
+    <div class="popup popup_add-card">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__add-form">
+          <input
+            class="popup__input popup__input_type_title"
+            type="text"
+            name="title"
+            placeholder="Название"
+          />
+          <input
+            class="popup__input popup__input_type_subtitle"
+            type="text"
+            name="subtitle"
+            placeholder="Ссылка на картинку"
+          />
+          <button
+            class="popup__save-button"
+            type="submit"
+            aria-label="Создать"
+          >
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_zoom-card">
+        <form class="zoom">
+          <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <img class="zoom__image" src="." alt=".">
+        <div class="zoom__title"></div>
+        </form>
+      </div>
+    </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
