--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="cards">
           <template id="element-template">
             <li class="element">
-              <img class="element__image" src="" alt="" />
+              <img class="element__image" src="?" alt="?" />
               <button
                 class="element__delete-button"
                 type="button"
@@ -140,7 +140,6 @@
         <img class="zoom__image" src="." alt=".">
         <div class="zoom__title"></div>
         </form>
-      </div>
     </div>
 
     <script src="./scripts/index.js"></script>
