Some fixes after first review

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="zoom__title"></div>
         </form>
     </div>
-
+    <script src="./scripts/constants.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
