--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
             class="popup__input popup__input_type_title"
             type="text"
             name="title"
+            placeholder="Имя"
           />
           <input
             class="popup__input popup__input_type_subtitle"
             type="text"
             name="subtitle"
+            placeholder="Вид деятельности"
           />
           <button
             class="popup__save-button"
