--- a/index.html
+++ b/index.html
@@ -76,19 +76,29 @@
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__edit-form">
+        <form class="popup__edit-form popup__form" name="edit-form" novalidate>
           <input
             class="popup__input popup__input_type_title"
             type="text"
             name="title"
             placeholder="Имя"
+            id="input-edit-title"
+            minlength="2" 
+            maxlength="40" 
+            required
           />
+          <span id="input-edit-title-error" class="popup__error"></span>
           <input
             class="popup__input popup__input_type_subtitle"
             type="text"
             name="subtitle"
             placeholder="Вид деятельности"
+            id="input-edit-subtitle"
+            minlength="2" 
+            maxlength="200" 
+            required
           />
+          <span id="input-edit-subtitle-error" class="popup__error"></span>
           <button
             class="popup__save-button"
             type="submit"
@@ -108,19 +118,27 @@
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__add-form">
+        <form name="add-form" class="popup__add-form popup__form" novalidate>
           <input
             class="popup__input popup__input_type_title"
             type="text"
             name="title"
             placeholder="Название"
+            id="input-add-title"
+            minlength="2" 
+            maxlength="30" 
+            required
           />
+          <span id="input-add-title-error" class="popup__error"></span>
           <input
             class="popup__input popup__input_type_subtitle"
-            type="text"
+            type="url"
             name="subtitle"
             placeholder="Ссылка на картинку"
+            id="input-add-subtitle"
+            required
           />
+          <span id="input-add-subtitle-error" class="popup__error"></span>
           <button
             class="popup__save-button"
             type="submit"
@@ -145,5 +163,6 @@
     </div>
     <script src="./scripts/constants.js"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
