Some fixes after first review

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           type="button"
           aria-label="Закрыть"
         ></button>
-        <h2 class="popup__title">Новое место</h2>
         <form name="add-form" class="popup__add-form popup__form" novalidate>
+          <h2 class="popup__title">Новое место</h2>
           <input
             class="popup__input popup__input_type_title"
             type="text"
@@ -163,6 +163,6 @@
     </div>
     <script src="./scripts/constants.js"></script>
     <script src="./scripts/index.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
