--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
         </form>
     </div>
     <script src="./scripts/constants.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
