Refactoring and using webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pages/index.css" />
     <title>Mesto</title>
   </head>
 
@@ -11,7 +10,7 @@
     <header class="header">
       <img
         class="header__logo"
-        src="./images/header-logo.svg"
+        src="<%=require('./images/header-logo.svg')%>"
         alt="Логотип Mesto Russia"
       />
     </header>
@@ -20,7 +19,7 @@
       <section class="profile">
         <img
           class="profile__avatar"
-          src="./images/jacques-yves-cousteau.jpg"
+          src="<%=require('./images/jacques-yves-cousteau.jpg')%>"
           alt="Жак-Ив Кусто"
         />
         <div class="profile__info">
@@ -160,8 +159,5 @@
         <img class="zoom__image" src="." alt=".">
         <div class="zoom__title"></div>
         </form>
-    </div>
-    <script src="./scripts/constants.js"></script>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
