<div> was closed

--- a/src/index.html
+++ b/src/index.html
@@ -159,5 +159,6 @@
         <img class="zoom__image" src="." alt=".">
         <div class="zoom__title"></div>
         </form>
+    </div>
   </body>
 </html>
