Some fixes after first review

--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@
             type="submit"
             aria-label="Сохранить"
           >
-            Создать
+            Сохранить
           </button>
         </form>
       </div>
